# oxigrid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  doc_map.md  feature_usage.md  tarpaulin.toml
.github/workflows/: ci.yml.disabled
OXIGRID/: Cargo.toml
OXIGRID/src/: lib.rs
abc/: Cargo.toml
benches/: battery_bench.rs  opf_bench.rs  powerflow_bench.rs
bin-crates/demo2/: Cargo.toml
bin-crates/oxigrid-demo/: Cargo.toml
examples/: battery_cycling.rs  ieee14_powerflow.rs  microgrid_optimization.rs  renewable_forecast.rs
scripts/: update_doc_map.py  update_doc_map.sh
src/: error.rs  lib.rs  prelude.rs
src/analytics/: analytics.md  carbon.rs  carbon_forecast.rs  energy_equity.rs  grid_health.rs  grid_operations.rs  metrics.rs  mod.rs  operational_analytics.rs  predictive_maintenance.rs
src/battery/: advanced_bms.rs  aging.rs  aging_map.rs  battery.md  bms.rs  charging.rs  degradation_model.rs  electrothermal.rs  fast_charging.rs  fault_detection.rs  grid_services.rs  marketplace.rs  mod.rs  pack.rs  safety.rs  scheduler.rs  second_life.rs  soc.rs  soh_prediction.rs  sop.rs  state_estimation.rs  thermal.rs  thermal_management.rs  v2g_second_life.rs
src/digitaltwin/: alert.rs  asset_digitization.rs  digitaltwin.md  mod.rs  realtime_sync.rs  replay.rs  telemetry.rs  twin.rs
src/harmonics/: active_filter.rs  analysis.rs  filter.rs  flicker.rs  harmonic_pf.rs  harmonics.md  mitigation.rs  mod.rs  source_identification.rs  standards.rs
src/io/: csv.rs  io.md  matpower_export.rs  mod.rs  oxirs_bridge.rs  pmu.rs  serialize.rs  timeseries.rs  visualization.rs
src/monitoring/: equipment_health.rs  frequency_monitoring.rs  micro_scada.rs  mod.rs  monitoring.md  oscillation.rs  substation.rs  wams.rs
src/network/: admittance.rs  advanced_partition.rs  asset_lifecycle.rs  asset_management.rs  branch.rs  bus.rs  cable_sizing.rs  congestion.rs  contingency.rs  dc_switching.rs  dlr.rs  energy_flow.rs  extreme_weather.rs  facts.rs  feeder_automation.rs  flisr.rs  geospatial.rs  hvdc.rs  hvdc_control.rs  impedance_spectroscopy.rs  metrics.rs  mod.rs  network.md  network_design.rs  offshore_substation.rs  partition.rs  reconfiguration.rs  reduction.rs  reliability_assessment.rs  reliability_indices.rs  resilience.rs  resilience_planning.rs  self_healing.rs  smart_transformer.rs  thevenin.rs  topology.rs  topology_optimization.rs  transformer.rs  upfc.rs  voltage_regulation.rs
src/optimize/: mod.rs  optimize.md  reliability.rs
src/planning/: distribution.rs  distribution_planner.rs  integrated.rs  mod.rs  planning.md  stochastic.rs
src/powerelectronics/: converter.rs  converters.rs  mod.rs  powerelectronics.md
src/powerflow/: acdc_pf.rs  bad_data.rs  branch_flows.rs  contingency_analysis.rs  continuation.rs  dc_powerflow.rs  dsse.rs  dynamic_se.rs  fast_decoupled.rs  flow_decomposition.rs  harmonic_pf.rs  harmonic_pf_problem.rs  hem.rs  jacobian.rs  linalg.rs  linear_ppf.rs  mc_ppf.rs  mod.rs  newton_raphson.rs  pem_ppf.rs  powerflow.md  probabilistic.rs  result.rs  sensitivity.rs  simd_kernels.rs  sparse_lu.rs  state_estimation.rs  stochastic_lf.rs  timeseries_sim.rs  unbalanced.rs  unbalanced_continuation.rs
tests/: arima_test.rs  asymmetric_fault_test.rs  battery_p2d_test.rs  battery_proptest.rs  battery_thermal_test.rs  coverage_test.rs  dc_opf_validation_test.rs  ems_test.rs  file_size_guard.rs  geospatial_test.rs  harmonics_proptest.rs  harmonics_test.rs  ieee118_test.rs  ieee14_test.rs  ieee300_e2e.rs  ieee300_test.rs  ieee30_test.rs  ieee57_test.rs  network_petgraph_test.rs  network_reduction_test.rs  no_std_units_test.rs  pandapower_test.rs  powerflow_proptest.rs  protection_test.rs  restoration_test.rs  security_test.rs  sparse_lu_dispatch_test.rs  stability_proptest.proptest-regressions  stability_proptest.rs  stability_test.rs  state_estimation_test.rs  testcases_test.rs
(+329 files in other folders)
