[package]
name = "oxigrid"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Pure Rust Energy Systems Simulation & Optimization Library"
authors = ["COOLJAPAN OU (Team Kitasan)"]
repository = "https://github.com/cool-japan/oxigrid"

[dependencies]
petgraph = "0.8.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
log = "0.4"
tracing = "0.1"
nalgebra = "0.34.2"
sprs = "0.11.4"
num-complex = { version = "0.4.6", default-features = false, features = ["serde", "libm"] }
rayon = { version = "1.12", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
approx = "0.5"

[features]
default = [
    "std",
    "powerflow",
    "stability",
    "battery",
    "battery-p2d",
    "renewable",
    "optimize",
    "harmonics",
    "protection",
    "powerelectronics",
]
std = []
powerflow = []
stability = ["powerflow"]
battery = []
battery-p2d = ["battery"]
renewable = []
optimize = ["powerflow"]
harmonics = []
protection = ["powerflow"]
powerelectronics = []
simd = []
parallel = ["std", "dep:rayon"]

[workspace]
members = [
    "./",
    "bin-crates/oxigrid-demo",
    "bin-crates/demo2",
]
